[workspace]
resolver = "3"
members = ["modules/mnode_console", "modules/mnode_encoding", "modules/mnode_fetch", "modules/mnode_fs", "modules/mnode_navigator", "modules/mnode_process", "modules/mnode_url", "modules/mnode_utils",
    "runtime",
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
