[workspace]
resolver = "3"
members = ["modules/web_console", "modules/web_encoding", "modules/web_fetch", "modules/node_fs", "modules/web_navigator", "modules/node_process", "modules/web_url", "modules/utils",
    "runtime",
]

[profile.release]
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
strip = "symbols"
