[package]
name = "mnode"
version = "0.1.0"
edition = "2024"

[features]
default = ["console", "navigator", "url", "encoding", "fetch", "fs", "process"]
console = ["dep:mnode_console"]
navigator = ["dep:mnode_navigator"]
url = ["dep:mnode_url"]
encoding = ["dep:mnode_encoding"]
fetch = ["dep:mnode_fetch"]
fs = ["dep:mnode_fs"]
process = ["dep:mnode_process"]

[dependencies]
anyhow = "1.0.100"
clap_lex = "0.7.5"
rquickjs = { version = "0.9.0", features = ["classes", "properties", "loader"] }
mnode_utils = { path = "../modules/mnode_utils" }

# Modules
mnode_console = { path = "../modules/mnode_console", optional = true }
mnode_encoding = { path = "../modules/mnode_encoding", optional = true }
mnode_fetch = { path = "../modules/mnode_fetch", optional = true }
mnode_navigator = { path = "../modules/mnode_navigator", optional = true }
mnode_url = { path = "../modules/mnode_url", optional = true }
mnode_fs = { path = "../modules/mnode_fs", optional = true }
mnode_process = { path = "../modules/mnode_process", optional = true }

