[package]
name = "mdeno"
version = "0.1.0"
edition = "2024"

[features]
default = ["console", "navigator", "url", "encoding", "fetch"]
console = ["dep:web_console"]
navigator = ["dep:web_navigator"]
url = ["dep:web_url"]
encoding = ["dep:web_encoding"]
fetch = ["dep:web_fetch", "web_fetch?/native-tls"]
fetch-rustls = ["dep:web_fetch", "web_fetch?/rustls"]

[dependencies]
anyhow = "1.0.100"
clap_lex = "0.7.5"
libsui = "0.10.0"
rquickjs = { version = "0.10.0", features = ["classes", "properties", "loader"] }
utils = { path = "../modules/utils" }

# Modules
web_console = { path = "../modules/web_console", optional = true }
web_encoding = { path = "../modules/web_encoding", optional = true }
web_fetch = { path = "../modules/web_fetch", optional = true, default-features = false }
web_navigator = { path = "../modules/web_navigator", optional = true }
web_url = { path = "../modules/web_url", optional = true }
