[package]
name = "mdeno"
version = "0.1.0"
edition = "2024"

[features]
default = ["console", "navigator", "url", "encoding", "fetch", "deno_fs", "deno_os"]
console = ["dep:web_console"]
navigator = ["dep:web_navigator"]
url = ["dep:web_url"]
encoding = ["dep:web_encoding"]
fetch = ["dep:web_fetch", "web_fetch?/native-tls"]
fetch-rustls = ["dep:web_fetch", "web_fetch?/rustls"]
deno_fs = ["dep:deno_fs"]
deno_os = ["dep:deno_os"]

[dependencies]
anyhow = { version = "1.0.100" }
clap_lex = { version = "0.7.5" }
libsui = { version = "0.10.0" }
rquickjs = { version = "0.10.0", features = ["classes", "properties", "loader"] }
smol = { version = "2.0.2" }
utils = { path = "../modules/utils" }

# Modules
deno_fs = { path = "../modules/deno_fs", optional = true }
deno_os = { path = "../modules/deno_os", optional = true }
web_console = { path = "../modules/web_console", optional = true }
web_encoding = { path = "../modules/web_encoding", optional = true }
web_fetch = { path = "../modules/web_fetch", optional = true, default-features = false }
web_navigator = { path = "../modules/web_navigator", optional = true }
web_url = { path = "../modules/web_url", optional = true }
