[package]
name = "mnode_fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = { version = "0.10.0", features = ["classes", "properties", "loader"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net"] }
hyper = { version = "1.7.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
http-body-util = "0.1.3"
tokio-native-tls = "0.3.1"
bytes = "1.10.1"
once_cell = "1.21.3"
serde_json = "1.0.145"
mnode_utils = { path = "../mnode_utils" }

[target.'cfg(all(target_os = "linux", target_env = "musl"))'.dependencies]
openssl-sys = { version = "0.9.109", features = ["vendored"] }
