[package]
name = "mnode_fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = { version = "0.10.0", features = ["classes", "properties", "loader"] }
tokio = { version = "1.47.1", features = ["rt-multi-thread", "net"] }
hyper = { version = "1.7.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.17", features = ["tokio"] }
http-body-util = "0.1.3"
tokio-native-tls = { version = "0.3.1", optional = true }
tokio-rustls = { version = "0.25.0", optional = true, features = ["ring"] }
webpki-roots = { version = "0.26.0", optional = true }
bytes = "1.10.1"
once_cell = "1.21.3"
serde_json = "1.0.145"
mnode_utils = { path = "../mnode_utils" }

[features]
default = []
native-tls = ["tokio-native-tls"]
rustls = ["tokio-rustls", "webpki-roots"]
