[package]
name = "mnode_fs"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = { version = "0.9.0", features = ["classes", "properties", "loader"] }
serde_json = "1.0.145"
mnode_utils = { path = "../mnode_utils" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security", "Win32_System_IO"] }
