[package]
name = "node_fs"
version = "0.1.0"
edition = "2024"

[lib]
path = "lib.rs"

[dependencies]
rquickjs = { version = "0.10.0", features = ["classes", "properties", "loader"] }
serde_json = "1.0.145"
utils = { path = "../utils" }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.62.2", features = ["Win32_Storage_FileSystem", "Win32_Foundation", "Win32_Security", "Win32_System_IO"] }
