[package]
name = "web_fetch"
version = "0.1.0"
edition = "2024"

[dependencies]
rquickjs = { version = "0.10.0", features = ["classes", "properties", "loader"] }
smol = { version = "2.0.2" }
smol-hyper = { version = "0.1.1" }
hyper = { version = "1.7.0", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1.17", default-features = false }
http-body-util = { version = "0.1.3" }
async-native-tls = { version = "0.5.0", optional = true }
futures-io = { version = "0.3.31", optional = true }
futures-rustls = { version = "0.26.0", optional = true, features = ["ring"] }
rustls = { version = "0.23.35", optional = true }
webpki-roots = { version = "1.0.4", optional = true }
bytes = { version = "1.10.1" }
once_cell = { version = "1.21.3" }
serde_json = { version = "1.0.145" }
utils = { path = "../utils" }

[features]
default = []
native-tls = ["dep:async-native-tls", "dep:futures-io"]
rustls = ["dep:futures-rustls", "dep:rustls", "dep:webpki-roots", "dep:futures-io"]
